--- a/bonapart-frontend/frontend/css/still.css
+++ b/bonapart-frontend/frontend/css/still.css
@@ -281,14 +281,7 @@ header .navigation ul li a{
 
 /* slider area */
 
-.main .banner .banner-slider{
-    height: 325px;
-    margin:0px 82px;
-    background: rgba(7, 47, 72, .42);
-    border-radius: 15px 15px 0px 0px;
-    padding: 50px 87px 0px;
-    position: relative;
-}
+
 .main .banner .banner-slider::before{
     content: "";
     position: absolute;
@@ -561,20 +554,282 @@ header .navigation ul li a{
 
 
 /*2- call section area- */
-
+.main .banner .banner-slider{
+    height: 325px;
+    margin:0px 82px;
+    background: rgba(7, 47, 72, .42);
+    border-radius: 15px 15px 0px 0px;
+    padding: 50px 87px 0px;
+    position: relative;
+}
+.main .banner .banner-filter{
+    height: 325px;
+    margin:0px 82px;
+    background: rgba(7, 47, 72, .42);
+    border-radius: 15px 15px 0px 0px;
+    padding: 30px 87px 0px;
+    position: relative;
+}
 .product-search-area{
     min-width: 1670px;
     height: 500px;
     margin-top: -100px;
     position: relative;
     z-index: 2;
-    padding: 80px 132px 90px 132px;
+    padding: 57px 132px 0px 132px;
     display: flex;
     flex-direction: column;
-    /* background-color: var(--bg-2); */
+}
+
+/* page 2 */
+.filter-item-section .product-search-area{
+    height: 100%;
+    margin-bottom: 90px;
+
+    margin-top: -239px;
+}
+.filter-item-section .product-search-area::before{
+    position: absolute;
+    content: "";
+    background-color: var(--bg-2);
+    width: 100%;
+    height: 32%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 10px;
+}
+.filter-item-section .product-search-area::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 1px;
+    background-color: #707070;
+    z-index: 100;
+    width: 100%;
+    top: 275px;
+}
+
+.filter-item-section #open-search{
+    background-color: transparent;
+    padding-top: 0;
+}
+.filter-item-section #open-search .item-box{
+    background-color: #fff;
+    box-shadow: none;
+    border: none;
+}
+
+.search-breadcrumb{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    font-style: italic;
+}
+.search-breadcrumb .breadcrumb-left,
+.search-breadcrumb .breadcrumb-right,
+.search-breadcrumb span{
+    font-size: 20px;
+    font-weight: 300;
+}
+
+@media screen and (max-width:1400px) {
+    .filter-item-section .product-search-area::after{
+        top: 300px;
+    }
+}
+@media screen and (max-width:1200px) {
+    .main .banner .banner-slider, .main .banner .banner-filter{
+        margin:0px auto;
+        width: 90%;
+        padding: 30px 30px 0px;
+    }
+    .filter-item-section .product-search-area::after{
+       display: none;
+    }
+    .search-breadcrumb .breadcrumb-left,
+    .search-breadcrumb .breadcrumb-right,
+    .search-breadcrumb span{
+        font-size: 15px;
+    }
+}
+       
+
+
+
+#check-filter-area .check-list{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    border: 1px solid #707070;
+    padding: 15px;
+    position: relative;
+}
+#check-filter-area .check-list:not(:last-child){
+    margin-bottom: 35px;
+}
+#check-filter-area h5{
+    font-size: 20px;
+    color: var(--main-b);
+    letter-spacing: -1px;
+}
+#check-filter-area .check-list::after{
+    content: "";
+    position: absolute;
+    right: 8px;
+    top: 5px;
+    background-color: var(--main-b);
+    width: 2px;
+    height: 60%;
+}
+#check-filter-area .check-list label{
+    font-size: 15px;
+    color: #707070;
+    margin-left: 25px;
+}
+#check-filter-area .check-list label::before{
+    content: "";
+    background-image: url(../../frontend/icons/check-before.png);
+    height: 17px;
+    width: 17px;
+    position: absolute;
+    margin-left: -25px;
+    margin-top: 2px;
+    z-index: 5;
+}
+#check-filter-area .check-list input{
+    position: absolute;
+    cursor: auto;
+    opacity: 0;
+}
+#check-filter-area .check-list input:checked + label::before{
+    content: "";
+    background-image: url(../../frontend/icons/check-after.png);
+    background-repeat: no-repeat;
+    height: 25px;
+    width: 20px;
+    position: absolute;
+    margin-left: -25px;
+    margin-top: 2px;
+    z-index: 5;
+}
+
+#check-filter-area input[type=text]{
+    width: 100%;
+    outline: none;
+    border: 1px solid #707070;
+    background: transparent;
+    height: 50px;
+    padding: 15px;
+}
+#open-search .dropdown-toggle{
+    cursor: pointer;
+    background: transparent!important;
+    color: inherit!important;
+    border: 1px solid #c3c3c3!important;
+    font-weight: 300;
+}
+.product-search-area .dropdown-item{
+    font-size: 15px!important;
+    color: #000!important;
+    font-size: normal!important;
+    font-style: normal!important;
 
 }
-.product-search-area::before{
+.product-search-area .dropdown-toggle::after {
+    margin-left: 1.5em!important;
+}
+.product-search-area .page-number{
+    margin-bottom: 28px;
+    font-size: 15px;
+}
+.product-search-area .page-number span{
+    font-size: 15px;
+}
+.product-search-area .product-found,.product-search-area .product-found span{
+    font-size: 15px!important;
+    color: #707070;
+    font-style: italic;
+}
+.design-buttons{
+    height: 30px;
+    margin-left: 20px;
+    color: var(--main-r);
+}
+.design-buttons .design-1, .design-buttons .design-2{
+    padding: 5px;
+    cursor: pointer;
+}
+
+.design-buttons .item.active{
+    background-color: #fff;
+    border: 1px solid var(--main-r);
+    border-radius: 0!important;
+}
+
+
+#open-search .bordered{
+    height: 2px;
+    background-color: #707070;
+    margin-top: 20px;
+}
+
+#open-search .page-next{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+#open-search .page-next .page-box{
+    width: 32px;
+    height: 32px;
+    border: 1px solid #707070;
+    font-size: 15px;
+    color: #000;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+#open-search .page-next .page-box-number.active{
+    background-color: var(--main-r);
+    color: #fff;
+    border-radius: 0px;
+}
+#open-search .page-next .page-box:not(:last-child){
+    margin-right: 5px;
+}
+#open-search .page-next .left,
+#open-search .page-next .right{
+    border: none;
+    background-color:var(--main-b);
+    color: #fff;
+    font-size: 11px;
+}
+
+@media screen and (max-width:1620px) {
+    .design-buttons{
+        display: none!important;
+    }
+}
+/* ----- */
+
+.product-search-area.active-before::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60%;
+    background-color: var(--bg-2);
+    z-index: -1;
+    border-radius: 10px;
+}
+.product-search-area.active-before-2::before{
     content: "";
     position: absolute;
     top: 0;
@@ -753,9 +1008,16 @@ header .navigation ul li a{
     display: inline-block;
     font-style: italic;
 }
-#open-search .title .cat-to-cat {
+#open-search .title .cat-to-cat span{
     font-style: italic;
     font-weight: 500;
+    font-size: 15px;
+    color: #000;
+}
+#open-search .title p span{
+
+    color: #000;
+    font-size: 15px;
 }
 #open-search .item-box{
     padding: 20px 20px 15px 30px;
@@ -766,6 +1028,11 @@ header .navigation ul li a{
     box-shadow: var(--shadow);
     margin-bottom: 40px;
     border: 1px solid #EAEAEA;
+}
+#open-search .item-box.col-md-6 {
+    flex: 0 0 auto;
+    margin-right: 23px;
+    width: 48%;
 }
 #open-search .item-box::before{
     position: absolute;
@@ -809,6 +1076,11 @@ header .navigation ul li a{
 #open-search .item-box li{
     font-weight: 500;
 }
+#open-search .item-box li span{
+    font-size: 15px;
+    font-style: normal;
+    color: #000;
+}
 #open-search .item-box li:not(:last-child){
     display: inline-block;
     padding-right: 20px;
@@ -816,7 +1088,7 @@ header .navigation ul li a{
     border-right: 1px solid var(--main-r);
 }
 #open-search .item-box .oem{
-    color: var(--main-r);
+    color: var(--main-r)!important;
 }
 #open-search .item-box .marketing{
     height: 40px;
@@ -844,6 +1116,7 @@ header .navigation ul li a{
     width: 75px;
     border-radius: 5px;
     margin-right: 30px;
+    color: #ffff;
 }
 #open-search .item-box .marketing .inspect a{
     background-color: var(--main-b);
@@ -851,6 +1124,8 @@ header .navigation ul li a{
     font-size: 13px;
     padding: 10px 15px;
     border-radius: 5px;
+    color: #ffff;
+    font-style: normal;
 }
 #open-search .item-box .marketing .add-card{
     background-color: var(--main-r);
@@ -867,6 +1142,7 @@ header .navigation ul li a{
     background-color: var(--main-b);
 }
 #open-search .item-box .marketing .add-card .how-much{
+    
     border-right: 1px solid rgba(255, 255, 255, .5);
     padding: 10px 0px 10px 10px;
     height: 100%;
@@ -879,6 +1155,10 @@ header .navigation ul li a{
     margin-right: 5px;
     padding: 3px;
     color: #fff;
+    font-style: normal;
+}
+#open-search .item-box .marketing .add-card a{
+    font-style: normal;
 }
 #open-search .item-box .marketing .add-card span:not(:last-child){
     margin-right: 5px;
